--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   firebase_auth: ^6.0.2
   firebase_core: ^4.1.0
   firebase_database: ^12.0.1
+  intl: ^0.20.2
+  connectivity_plus: ^7.0.0
+  cloud_firestore: ^6.0.1
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +63,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+ 
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
