--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   intl: ^0.20.2
   connectivity_plus: ^7.0.0
   cloud_firestore: ^6.0.1
+  flutter_local_notifications: ^19.4.2
+  firebase_messaging: ^16.0.2
 
 
 dev_dependencies:
