--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^6.0.1
   flutter_local_notifications: ^19.4.2
   firebase_messaging: ^16.0.2
+  http: ^1.2.0
 
 
 dev_dependencies:
